--- a/nginx/templates/default/nginx.conf.erb
+++ b/nginx/templates/default/nginx.conf.erb
@@ -1,4 +1,4 @@
-user <%= @user %>;
+user www-data;
 worker_processes  <%= @node[:nginx][:worker_processes] %>;
 
 error_log  /var/log/nginx/error.log;
@@ -30,17 +30,17 @@ http {
 # mail {
 #     # See sample authentication script at:
 #     # http://wiki.nginx.org/NginxImapAuthenticateWithApachePhpScript
-#
+# 
 #     # auth_http localhost/auth.php;
 #     # pop3_capabilities "TOP" "USER";
 #     # imap_capabilities "IMAP4rev1" "UIDPLUS";
-#
+# 
 #     server {
 #         listen     localhost:110;
 #         protocol   pop3;
 #         proxy      on;
 #     }
-#
+# 
 #     server {
 #         listen     localhost:143;
 #         protocol   imap;
